# chimera_mcp

./: .gitignore  CLAUDE.md  README.md  fastmcp_server.py  pyproject.toml  requirements.txt  run_chimera.py  server_config.md
agents/: __init__.py  intent_search.py
config/: logging.py  settings.py
core/: __init__.py  correct_mcp_chain.py  file_extractor.py  graphiti_client.py  models.py  notion_client.py  wechat_graphiti_client.py  wechat_models.py  wechat_processor.py  wechat_search.py
docs/: DEVELOPMENT_GUIDE.md  LANGCHAIN_REFACTOR_SUMMARY.md  Notion API and Graphiti Tutorail.docx
llm_cache/: chimera_cache.json
local_data/wechat/: processed_wechat_files.txt
prompts/: __init__.py  intent_evaluation.py  wechat_analysis.py
scripts/: __init__.py  deployment_check.py  health_check.py  manual_sync.py  setup_database.py  wechat_sync.py
sync_service/: __init__.py  graph_updater.py  notion_scanner.py  scheduler.py  sync_service.py
tests/: cleanup_neo4j.py  demo_intent_search.py
tests/mcp_server/: __init__.py
tests/notion/: __init__.py  debug_file_extraction.py  test_get_all_files.py
tests/sync_service/: __init__.py
tests/wechat/: 5_entities_addsearch_test.py  entity_extraction.py
utils/: fastmcp_utils.py
